--- a/my-app/src/sass/components/footer/_footer.scss
+++ b/my-app/src/sass/components/footer/_footer.scss
@@ -1,30 +1,51 @@
 .footer--container {
     width: 100%;
     background: $bkGrey;
-    padding: 5%;
+    padding: 10%;
+    @media(min-width: 768px){
+        padding: 2%;
+    }
     & .footer--content-wrapper {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 6%;
+        max-width: 1200px;
+        margin: 0 auto;
+        @include flexbox($dir: column);
+        @media(min-width: 768px){
+            @include flexbox($dir: row, $just: space-between);
+        }
         & .footer--logo--container{
+            margin-bottom: 10%;
             @media(min-width: 768px){
-                display: grid;
-                grid-template-rows: 1fr 1fr;
-                gap: 20%;
-                & .copy--right--container {
-                    font-size: 10px;
-                }
+                margin-bottom: 0%;
+            }
+            & .copy--right--container{
+                font-size: 10px;
+                color: #666;
+                padding-top: 5%;
             }
         }
+
         & .footer--ul {
-            @media(min-width: 768px){
-                display: grid;
-                grid-template-rows: 1fr 1fr;
-                gap: 12%;
-                & .footer-li {
-                    font-size: 12px;
-                }
+            color: #666;
+            & .footer-li {
+                font-size: 13px;
+                line-height: 24px;
             }
+        }
+        & .footer--list--col.two {
+            padding-top: 5%;
+            @media(min-width: 768px){
+                padding-top: 0%;
+            }
+             & .footer--ul {
+                color: #666;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                @media(min-width: 768px){
+                    display: block;
+                }
+             }
+            
         }
     }
 }
