--- a/my-app/src/sass/components/header/_headline.scss
+++ b/my-app/src/sass/components/header/_headline.scss
@@ -47,7 +47,88 @@
         width: 50%;
         position: static;
     }
+
 }
+
+
+.menu-drop-down{
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    &.active{
+        display: block;
+    }
+    & .menu--container{
+        width: 100%;
+        min-height: 100vh;
+        background: #eee;
+        z-index: 10;
+        position: fixed;
+        @media(min-width: 768px){
+            width: 50%;
+        }
+        & .dropdown--container {
+            margin: 0 auto;
+            width: 75%;
+            padding-top: 5%;
+            & .logo-wrap{
+                width: 40%;
+            }
+            & .menu--item{
+                list-style: none;
+                font-weight: 700;
+                font-style: normal;
+                text-transform: uppercase;
+                line-height: 2.35;
+                letter-spacing: .05em;
+                &:first-of-type {
+                    border-top: 1px solid #111;
+                    width: 100%;
+                    padding-top: 12px;
+                    @media(min-width: 500px){
+                        width: 335px ;
+                    }
+                }
+            }
+            & .menu-ul:first-of-type .menu--item{
+                border-top: none;
+            } 
+            & .menu-ul:last-child .menu--item{
+                font-weight: 100;
+            }
+        }
+    }
+}
+
+
+.menu-close-btn {
+    position: absolute;
+    left: 1%;
+    top: 4%;
+    width: 7vw;
+    height: 7vh;
+    opacity: 0.3;
+    cursor: pointer;
+    &:hover {
+      opacity: 1;
+    }
+    &:before, &:after {
+      position: absolute;
+      left: 3vw;
+      content: ' ';
+      height: 2vh;
+      width: 2px;
+      background-color: black;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
+    }
+  }
 
 .nav-button {
     position: fixed;
@@ -79,7 +160,7 @@
             line-height: 1;
             &:before {
                 content: "";
-                background: black;
+                background: white;
                 display: block;
                 height: 3px;
                 width: 30px;
@@ -101,7 +182,7 @@
     }
     & .logo-wrap{
         display: inline-block;
-        width: 140px
+        width: 150px
     }
 }
 
