--- a/my-app/src/sass/components/media/_media.scss
+++ b/my-app/src/sass/components/media/_media.scss
@@ -2,9 +2,12 @@
     width: 90%;
     margin: 0 auto;
     max-width: 1200px;
-    padding-bottom: 20vh;
-    @media(min-width: 768px){
-        padding-bottom: 15vh;
+    padding-bottom: 1%;
+    & .border.border-bottom.lower {
+        width: 100%;
+        @media(max-width: 767px){
+            margin-top: 20%;
+        }
     }
     & .media--column {
         @include flexbox($dir:column);
@@ -93,8 +96,10 @@
         & .secondary--video--container {
             & .spacer--container {
                 padding: 3%;
+                border-top: 1px solid $lineGrey;
                 @media(min-width: 768px){
                     padding: 6%;
+                    border: none;
                 }
             }
             & .secondary--wrapper {
@@ -111,6 +116,12 @@
             }
             & .filler--container{
                 visibility: hidden;
+                & h1 {
+                    @media(max-width: 768px){
+                        font-size: 4px;
+                        line-height: 15px;
+                    }   
+                }
             }
             & .video-container {
                 & .sub-video-title {
@@ -125,15 +136,21 @@
                         font-weight: 700;
                     }
                 }
+                &.one {
+                    border-bottom: 1px solid #b3b3b3;
+                    padding-bottom: 7%;
+                }
             }
         }
         & .prim--video--title{
             color: #464646;
             font-size: 16px;
             font-weight: 700;
+            padding-top: 3%;
             @media(min-width: 768px){
                 text-align: center;
             }
         }
     }
-} 
+}
+ 
