--- a/my-app/src/sass/components/topstory/_topstory.scss
+++ b/my-app/src/sass/components/topstory/_topstory.scss
@@ -48,6 +48,7 @@
     margin-bottom: 40px;
     width: 100%;
     position: relative;
+    z-index: 0;
     @media(min-width: 500px){
         padding: 20px 40px 0;
         margin-bottom: 60px;
