--- a/my-app/src/sass/components/news-container/_news.scss
+++ b/my-app/src/sass/components/news-container/_news.scss
@@ -72,6 +72,7 @@ h1 {
                 font-style: normal;
                 font-weight: 400;
                 font-size: 13px;
+                color: $blue;
             }
         }
     }
